# infodeck

./: AGENTS.md  DESIGN.md  frontend.yaml  pyproject.toml
cache/: repo_analysis_state.json  repo_summaries.json
src/infodeck/: __init__.py  __main__.py  app.py  config.py  main.py
src/infodeck/data/: github.py  memory_files.py  repo_analysis.py  sessions.py
src/infodeck/state/: app_state.py
src/infodeck/ui/: shell.py  status_bar.py  top_bar.py
src/infodeck/ui/conversations/: __init__.py  list_panel.py
src/infodeck/ui/github_repos/: __init__.py  list_panel.py
src/infodeck/ui/memory/: __init__.py  list_panel.py
tests/: test_app_state.py  test_config.py  test_github.py  test_memory_files.py  test_repo_analysis.py  test_sessions.py
