[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infodeck"
version = "0.1.0"
description = "A personal memory wiki and project dashboard"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
infodeck = "infodeck.main:main"

[tool.setuptools.packages.find]
where = ["src"]
